--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;0,600;1,400&display=swap');
+/* font-family: "Kanit", sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;600&display=swap');
+/* font-family: 'Comfortaa', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;600&display=swap');
+/* font-family: 'Signika Negative', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;600&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Unicase:wght@600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,10 +18,14 @@ html {
   overflow-x: hidden;
 }
 
-:root {}
+/* :root {} */
 
 .app {
-  background: #222;
+  --primaryColor: #eee;
+  --secondaryColor: rgb(218, 160, 120);
+  --secondaryColor: rgb(133, 88, 55);
+  background: #eee;
+  color: var(--primaryColor);
   width: 100vw;
-  min-height: 100vh;
+  min-height: 200vh;
 }
