--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 
+
+/* general */
+
 * {
   margin: 0;
   padding: 0;
@@ -16,7 +19,6 @@ html {
   overflow-x: hidden;
 }
 
-/* :root {} */
 
 .app {
   --primaryColor: #eee;
@@ -31,6 +33,7 @@ html {
   --textFont: "Comfortaa", sans-serif;
   --titleFont: "Merriweather", sans-serif;
   /* --navbarBgColor: rgb(32, 19, 9); */
+
 
 
 
@@ -200,4 +203,11 @@ html {
 .cracowAbout {
   background-image: url(./images/homeImages/krakow.jpg);
   background-size: cover;
+}
+
+.cracowHeader {
+  background-image: url(./images/krakow/wawel.jpg);
+  background-size: cover;
+  background-position: center 20%;
+  filter: brightness(0.7)
 }
