--- a/src/App.css
+++ b/src/App.css
@@ -242,3 +242,10 @@ html {
   background-position: center;
   background-attachment: fixed;
 }
+
+/* .restaurantHeader {
+  background-image: url(./images/restauracja/RESTAURACJA\ 015.jpg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+} */
