--- a/src/App.css
+++ b/src/App.css
@@ -256,3 +256,26 @@ html {
   background-position: center;
   background-attachment: fixed;
 } */
+
+.receptionImg {
+  background: url('./images/homeImages/RECEPCJA\ 005.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-x: center;
+  animation: zoom 20s ease infinite;
+  filter: saturate(0);
+}
+
+@keyframes zoom {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.2) translateX(-5%);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
