--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,16 @@ html {
   margin: 5vh auto 0;
 }
 
+@media (orientation: portrait) and (max-width: 800px) {
+  .mainSection {
+    position: relative;
+    min-height: 100vh;
+    width: 100vw;
+    max-width: 1360px;
+    margin: 5vh auto 0;
+  }
+}
+
 .main-page {
   position: relative;
   min-height: 100vh;
@@ -125,11 +135,18 @@ html {
   width: 100%;
   background: url("./images/homeImages/footerBg.jpg");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: cover;
   background-position: center 85%;
   filter: sepia(1) brightness(0.1);
   /* filter: grayscale(1) brightness(.5); */
   z-index: 0;
+}
+
+@media (orientation: portrait) and (max-width: 800px) {
+  .footerBg {
+    background-attachment: fixed;
+
+  }
 }
 
 
