--- a/src/App.css
+++ b/src/App.css
@@ -256,7 +256,7 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  filter: saturate(0) brightness(0.8);
+  filter: saturate(0);
 }
 
 .airportTransferHeader {
