--- a/src/App.css
+++ b/src/App.css
@@ -251,3 +251,34 @@ body {
     transform: scale(1);
   }
 }
+
+.error {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: var(--buttonFont);
+  text-transform: uppercase;
+}
+
+.error h2 {
+  font-size: 2rem;
+  margin-bottom: 10vh;
+  text-align: center;
+}
+
+.error a {
+  color: var(--secondaryColor2);
+  font-size: 4rem;
+  text-decoration: none;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.error a:hover {
+  font-size: 5rem;
+}
