--- a/src/App.css
+++ b/src/App.css
@@ -198,13 +198,13 @@ body {
 }
 
 .backgroundhotelInNumbers {
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
   background-image: url(./images/recepcja&bar/BAR\ 002.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
-  filter: saturate(0);
+  /* filter: saturate(0); */
 }
 
 .airportTransferHeader {
