--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
 
-/* @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@400;600&display=swap'); */
+
 
 
 /* general */
@@ -18,11 +18,75 @@ html {
 
 body {
   overflow-x: hidden;
+  --buttonFont: "Signika Negative", sans-serif;
+  --textFont: "Comfortaa", sans-serif;
+  --titleFont: "Merriweather", sans-serif;
+  width: 100vw;
 
 }
 
+.modeLightDark {
+  position: fixed;
+  top: 6.5%;
+  left: 2%;
+  transform: translateY(-50%);
+  height: 40px;
+  width: 80px;
+  border: 2px solid rgb(185, 130, 93);
+  border-radius: 10px;
+  font-size: 1.5rem;
+  color: rgb(185, 130, 93);
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 5px 0;
+  background: #111;
+  background: transparent;
+  z-index: 9999999;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+  .modeLightDark {
+    top: 10%;
+    left: 0;
+    ;
+    transform: rotate(-90deg);
+  }
+}
+
+.lightMode {
+  color: rgb(95, 72, 56);
+  background: #eee;
+  border-color: rgb(95, 72, 56);
+}
+
+.modeLightIcon {
+  animation: lightMode 1s infinite alternate;
+  font-size: 1.5rem;
+
+}
+
+@keyframes lightMode {
+  100% {
+    transform: translateX(5px);
+  }
+}
+
+.modeDarkIcon {
+  animation: darkMode 1s infinite alternate;
+  font-size: 1.5rem;
+  transform: rotateY(180deg);
+}
+
+@keyframes darkMode {
+  100% {
+    transform: rotateY(180deg) translateX(-5px);
+  }
+}
+
 .app {
-  overflow-x: hidden;
   --primaryColor: #eee;
   --secondaryColor2: rgb(185, 130, 93);
   --secondaryColor: rgb(133, 88, 55);
@@ -30,12 +94,41 @@ body {
   --favoriteRoomColor: rgb(44, 26, 18);
   --footerBgColor: rgb(20, 20, 20);
   --appBgColor: rgb(10, 10, 10);
-  --buttonFont: "Signika Negative", sans-serif;
-  --textFont: "Comfortaa", sans-serif;
-  --titleFont: "Merriweather", sans-serif;
+  --languageBg: rgba(0, 0, 0, 0.9);
+  --navbarBg: rgba(0, 0, 0, 0.85);
+  --navbarBg2: rgba(0, 0, 0, 0.98);
+  --navbarColor: rgb(133, 88, 55);
+  --servicesHomeBg: rgb(15, 15, 15);
+  --servicesHomeColor: #bbb;
+  --roomDetailBg: #111;
+  --equipmentsBg: #eee;
+
+
   background-color: var(--appBgColor);
   color: var(--primaryColor);
-  width: 100vw;
+}
+
+.app2 {
+  --primaryColor: #222;
+  --secondaryColor2: rgb(139, 97, 70);
+  --secondaryColor: rgb(133, 88, 55);
+  --bookBtnColor: rgb(95, 72, 56);
+  --favoriteRoomColor: rgb(44, 26, 18);
+  --footerBgColor: rgb(20, 20, 20);
+  --appBgColor: #eee;
+  --languageBg: rgba(255, 255, 255, 0.95);
+  --navbarBg: rgba(255, 255, 255, 0.95);
+  --navbarBg2: rgba(255, 255, 255, 0.98);
+  --navbarColor: rgb(189, 128, 82);
+  --servicesHomeBg: #ddd;
+  --servicesHomeColor: #333;
+  --roomDetailBg: #fff;
+  --equipmentsBg: #333;
+
+
+
+  background-color: var(--appBgColor);
+  color: var(--primaryColor);
 }
 
 .mainSection {
@@ -61,7 +154,7 @@ body {
   margin: 0 auto;
 }
 
-.title {
+.app .title {
   text-transform: uppercase;
   font-size: 2rem;
   font-family: "Merriweather", sans-serif;
@@ -69,7 +162,16 @@ body {
   color: var(--secondaryColor2);
   margin-bottom: 2vh;
   text-shadow: 3px 3px 3px black;
+}
 
+.app2 .title {
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-family: "Merriweather", sans-serif;
+  text-align: center;
+  color: var(--secondaryColor2);
+  margin-bottom: 2vh;
+  text-shadow: 1px 1px 1px black;
 }
 
 .titleContainer {
@@ -99,9 +201,11 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center 85%;
-  filter: sepia(1) brightness(0.1);
+  filter: sepia(0.7) brightness(0.15);
   z-index: 0;
 }
+
+
 
 @media (orientation: portrait) and (max-width: 800px) {
   .footerBg {
@@ -110,7 +214,7 @@ body {
 }
 
 .submenu {
-  background: rgba(0, 0, 0, 0.85);
+  background: var(--navbarBg);
   border: var(--bookBtnColor) 2px solid;
   border-top: none;
   border-radius: 0 0 10px 10px;
@@ -160,7 +264,7 @@ body {
 }
 
 .submenu-center a:hover {
-  color: var(--secondaryColor2);
+  color: var(--navbarColor);
 }
 
 .submenu-center svg {
