--- a/src/react-datepicker.css
+++ b/src/react-datepicker.css
@@ -94,10 +94,12 @@
   font-size: 1rem;
   background-color: white;
   color: #ccc;
+  border: 1px solid #eee;
   border: 2px solid rgb(95, 72, 56);
   border-radius: 0.3rem;
   display: inline-block;
   position: relative;
+  min-width: 20vw;
 }
 
 .react-datepicker--time-only .react-datepicker__triangle {
@@ -164,7 +166,7 @@
   position: relative;
   color: white;
   text-transform: capitalize;
-
+  min-width: 20vw;
 }
 
 .react-datepicker__header--time {
@@ -200,7 +202,7 @@
   font-size: 1rem;
   text-transform: uppercase;
   margin-bottom: 10px;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
 }
 
 .react-datepicker-time__header {
@@ -306,7 +308,7 @@
 }
 
 .react-datepicker__month {
-  margin: 0.5rem 1rem;
+  margin: 0.5rem 0rem;
   text-align: center;
 }
 
@@ -469,10 +471,11 @@
 .react-datepicker__time-name {
   color: #fff;
   display: inline-block;
-  width: 2rem;
+  width: 2.7rem;
   line-height: 1.7rem;
   text-align: center;
-  margin: 0.1rem 0.2rem;
+  margin: 0.1rem 0.1rem;
+
 }
 
 .react-datepicker__day,
@@ -879,4 +882,14 @@
 .react-datepicker__portal .react-datepicker__current-month,
 .react-datepicker__portal .react-datepicker-time__header {
   font-size: 1.44rem;
+}
+
+.react-datepicker__month-container {
+  min-width: 20vw;
+  padding: 0;
+}
+
+.react-datepicker__week {
+  min-width: 20vw;
+  padding: 0;
 }
